Hooked output on cmd commands and almost every other command